# zephyr

./: MAINTAINERS.yml  west.yml
arch/: Kconfig
arch/arc/: Kconfig
arch/arc/core/: thread.c
arch/arc/include/: kernel_arch_data.h  kernel_arch_func.h  swap_macros.h
boards/arc/em_starterkit/: Kconfig.defconfig  arc_mpu_regions.c  em_starterkit.dts  em_starterkit_em11d.dts
boards/arc/emsdp/: Kconfig.defconfig  arc_mpu_regions.c  emsdp-pinctrl.dtsi  emsdp.dts  emsdp_em9d.dts  platform.c
boards/arc/hsdk/: Kconfig.defconfig
boards/arc/iotdk/: arc_mpu_regions.c  iotdk.dts
boards/arc/nsim/: arc_mpu_regions.c  nsim.dtsi  nsim_em.dts
cmake/compiler/arcmwdt/: compiler_flags.cmake
doc/services/dsp/: index.rst
drivers/pinctrl/: pinctrl_emsdp.c
drivers/spi/: Kconfig.dw  spi_dw.c  spi_dw.h  spi_dw_regs.h
dts/arc/synopsys/: emsdp.dtsi
dts/bindings/spi/: snps,designware-spi.yaml
include/zephyr/: kernel.h
include/zephyr/math/: dsp.h
kernel/: thread.c
kernel/include/: kernel_arch_interface.h
modules/: Kconfig.cmsis  Kconfig.cmsis_dsp
modules/embarc_mli/: CMakeLists.txt  Kconfig  embarc_mli.ld
samples/modules/embarc_mli/cifar10_caffe/: CMakeLists.txt  README.rst  prj.conf
samples/modules/embarc_mli/cifar10_caffe/src/: cifar10_coefficients_chw_big.c  cifar10_coefficients_chw_small.c  cifar10_constants.h  cifar10_model.h  cifar10_model_chw.c  cifar10_ref_inout.h  ml_api_cifar10_caffe_main.c
soc/arc/snps_arc_iot/: linker.ld
soc/arc/snps_emsdp/: linker.ld
soc/arc/snps_emsk/: linker.ld
subsys/: Kconfig
subsys/dsp/: CMakeLists.txt  Kconfig
(+88 files in other folders)
